# grid_loss_prediction

./: .gitignore  README.md  pyproject.toml  y_pred_grid1_nbeats.csv
Data/meta/: descriptives_raw.tex  features_raw.tex
Data/processed/: grid_data.csv  prophet_data.csv  seasonal_data.csv
Data/raw/: test.csv  test_backfilled_missing_data.csv
Data/results/: y_pred_grid2_nbeats.csv  y_pred_grid3_nbeats.csv  y_pred_grid3_xgb.csv
Data/serialized/: processed_x_train_pickle  processed_x_train_scaled_pickle  x_test  x_test_with_lag  x_train  y_test_grid1  y_test_grid2  y_test_grid3  y_train_grid1  y_train_grid2  y_train_grid3
Grid_loss_prediction/Data/: data_exploration.py  feature_engineering.py  preprocessing.py
Grid_loss_prediction/Evaluation/: evaluation.py  visualize.py
Grid_loss_prediction/Model/: XGBoost.py  baseline.py  evaluation.py  nbeats.py  var.py
Log/: eval_data  feature_importance.eps  temp_a_imp.eps  temp_b_imp.eps
Models/: scaler.save  scaler_grid1.sav  scaler_grid2.sav  scaler_grid3.sav  scaler_test.sav  scaler_test.save  scaler_train.sav  scaler_train.save
Models/scalers/: scaler_grid2.sav  scaler_train.sav
Results/baseline/: evaluation.csv  evaluation.tex
Results/nbeats/: evaluation.csv  evaluation.tex
Results/var/: evaluation.csv  evaluation.tex
Results/xgboost/: evaluation.csv  evaluation.tex  y_pred_grid1_xgb.csv  y_pred_grid2_xgb.csv
Source/data/: preprocessing.py
Source/evaluation/: evaluation_metric.py
Source/model/: XGBoost.py  baseline.py  var.py  (+4 more)
Videos/: nbeat_288.mov  nbeats_144.mov  nbeats_432.mov  nbeats_576.mov
(+4 files in other folders)
